--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,9 +2,134 @@ body {
 	margin: 0;
 	font-family: "Roboto", "Trebuchet MS", Helvetica, Arial, sans-serif;
 	font-weight: normal;
+	/* background-color: #1a1a1a; */
+	background-color: #000;
 }
 
-.container {
-	background-image: url('https://i.annihil.us/u/prod/marvel/html_pages_assets/marvel-unlimited-sellpage/prod/masthead-bg-desktop.e85140c2.jpg');
-	background-size: cover;
+.backdrop_container {
+	text-align: center;
+}
+
+.marvel-logo {
+	width: 130px;
+}
+
+.landing-navbar {
+	display: flex;
+	justify-content: space-between;
+	padding: .5em 7em;
+	align-items: center;
+	background-color: black;
+}
+
+.marvel-backdrop {
+	width: 100%;
+	opacity: .7;
+	position: relative;
+	border-bottom: 2px solid grey;
+}
+
+.register-link {
+	color: white;
+	text-decoration: none;
+	font-size: 2em;
+	padding: 5px 20px;
+	border-radius: 2px;
+	background-color: rgb(61, 118, 243);
+}
+
+.login-link {
+	color: #f8f8ff;
+	text-decoration: none;
+	font-size: 1.7em;
+}
+
+.sign-in-container {
+	display: flex;
+	justify-content: space-evenly;
+	position: absolute;
+	bottom: 50%;
+	display: flex;
+	flex-direction: column;
+	left: 0;
+	right: 0;
+	margin: auto;
+	max-width: 800px;
+	-webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+	-moz-animation: fadein 3s; /* Firefox < 16 */
+	-ms-animation: fadein 3s; /* Internet Explorer */
+	-o-animation: fadein 3s; /* Opera < 12.1 */
+	animation: fadein 3s;
+}
+
+@keyframes fadein {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+.sign-in-container h1 {
+	color: #f8f8ff;
+	font-size: 2em;
+}
+
+.sign-in-container span {
+	color: #f8f8ff;
+	font-size: 1.3em;
+	margin: .6em 0;
+}
+
+.register-link-container {
+	margin-top: 2em;
+}
+
+.about_section {
+	margin: 2em;
+}
+
+.captain_america {
+	width: 300px;
 }
