--- a/client/src/index.css
+++ b/client/src/index.css
@@ -169,12 +169,12 @@ footer {
 
 .about_section h3 {
 	color: #f8f8ff;
-	font-size: 3em;
+	font-size: 2em;
 }
 
 .about_section p {
 	color: #f8f8ff;
-	font-size: 1.3em;
+	font-size: 1.1em;
 }
 
 @media screen and (min-width: 1100px) {
@@ -244,5 +244,13 @@ footer {
 	.about_overview {
 		max-width: 500px;
 		margin: 0;
+	}
+
+	.about_section h3 {
+		font-size: 3em;
+	}
+
+	.about_section p {
+		font-size: 1.3em;
 	}
 }
