--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@ body {
 	background-color: #1a1a1a;
 }
 
-footer {
+/* footer {
 	text-align: center;
 }
 
@@ -25,7 +25,7 @@ footer {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-}
+} */
 
 .backdrop_container {
 	text-align: center;
@@ -177,6 +177,67 @@ footer {
 	font-size: 1.1em;
 }
 
+/* ==========Register.js========== */
+
+.register-container {
+	padding: 5em 0;
+}
+
+.register-to-login {
+	color: rgb(61, 118, 243);
+	text-decoration: none;
+}
+
+.register-overview h1 {
+	color: #f8f8ff;
+	text-shadow: 10px 10px 8px #000;
+}
+
+.register-overview p {
+	color: rgb(151, 151, 151);
+	text-shadow: 10px 10px 8px #000;
+}
+
+.back-home-btn {
+	display: flex;
+	align-items: center;
+	color: rgb(168, 0, 0);
+	text-decoration: none;
+	text-shadow: 10px 10px 8px #000;
+}
+
+.form-section {
+	/* margin: 0 auto; */
+	width: 80%;
+	text-align: center;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+input {
+	padding: .2em;
+	font-size: 1.3em;
+	margin: .5em;
+	outline: none;
+	box-shadow: 10px 10px 8px #000;
+}
+
+.submit-btn {
+	font-size: 1.1em;
+	margin: 1em;
+	box-shadow: 10px 10px 8px #000;
+}
+
+.register-overview h1 {
+	color: #f8f8ff;
+	font-size: 2.5em;
+}
+
+.register-overview p {
+	font-size: 1.2em;
+}
+
 @media screen and (min-width: 1100px) {
 	.marvel-logo {
 		width: 130px;
@@ -251,6 +312,33 @@ footer {
 	}
 
 	.about_section p {
+		font-size: 1.3em;
+	}
+
+	/* ==========Register.js========== */
+	.register-container {
+		height: 100vh;
+		background-image: url('./images/deadpool.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
+
+	.form-section {
+		position: absolute;
+		top: 10%;
+		left: 0;
+		right: 0;
+		margin: auto;
+		width: 30%;
+		text-align: center;
+	}
+
+	.register-overview h1 {
+		font-size: 4em;
+	}
+
+	.register-overview p {
 		font-size: 1.3em;
 	}
 }
