--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@ html,
 body {
 	overflow-x: hidden;
 	line-height: 1.4;
+	height: 100%;
 }
 
 body {
@@ -183,19 +184,24 @@ body {
 	padding: 5em 0;
 }
 
-.register-to-login {
+.register-to-login,
+.login-to-register {
 	color: rgb(61, 118, 243);
 	text-decoration: none;
 }
 
-.register-overview h1 {
+.register-overview h1,
+.login-overview h1 {
 	color: #f8f8ff;
 	text-shadow: 10px 10px 8px #000;
+	font-size: 2.5em;
 }
 
-.register-overview p {
+.register-overview p,
+.login-overview p {
 	color: rgb(151, 151, 151);
 	text-shadow: 10px 10px 8px #000;
+	font-size: 1.2em;
 }
 
 .back-home-btn {
@@ -227,15 +233,6 @@ input {
 	font-size: 1.1em;
 	margin: 1em;
 	box-shadow: 10px 10px 8px #000;
-}
-
-.register-overview h1 {
-	color: #f8f8ff;
-	font-size: 2.5em;
-}
-
-.register-overview p {
-	font-size: 1.2em;
 }
 
 @media screen and (min-width: 1100px) {
@@ -324,6 +321,14 @@ input {
 		background-size: cover;
 	}
 
+	/* .login-container {
+		height: 100vh;
+		background-image: url('./images/spiderman-backdrop.jpg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+	} */
+
 	.form-section {
 		position: absolute;
 		top: 10%;
@@ -334,10 +339,12 @@ input {
 		text-align: center;
 	}
 
+	.login-overview h1,
 	.register-overview h1 {
 		font-size: 4em;
 	}
 
+	.login-overview p,
 	.register-overview p {
 		font-size: 1.3em;
 	}
