--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,8 @@
 html,
 body {
 	/* overflow-x: hidden; */
-	line-height: 1.4;
+	line-height: 1.5;
+	/* letter-spacing: 1px; */
 	height: 100%;
 }
 
@@ -420,5 +421,39 @@ input {
 		font-size: 1em;
 		margin: .5em 0;
 		color: #f8f8ff;
+	}
+
+	/* ==========ComicOverview.js========== */
+
+	.comic-overview-container {
+		display: flex;
+		width: 50%;
+		margin: 0 auto;
+		position: absolute;
+		top: 30%;
+		left: 0;
+		right: 0;
+	}
+
+	.comic-overview {
+		color: #f8f8ff;
+		margin: 0 1.5em;
+	}
+
+	.comic-overview h1 {
+		font-size: 2.7em;
+	}
+
+	.comic-overview p {
+		font-size: 1.225em;
+	}
+
+	.comic-creators-container {
+		/* display: flex;
+		align-items: center; */
+	}
+
+	.comic-creators span {
+		margin: 0 .5em;
 	}
 }
